Small Edits to make code more uniform